Fixed wrong spacings for projects section

--- a/src/assets/stylesheets/pages/landing/projects.less
+++ b/src/assets/stylesheets/pages/landing/projects.less
@@ -43,6 +43,7 @@
       }
 
       &-type {
+        margin-top: 15px;
       }
 
       &-company {
@@ -146,6 +147,7 @@
 
       span, li {
         font-size: 46px;
+        margin-left: 15px;
       }
 
       &-icon {
